lib/components/fabro-llm/tests/it/wire/snapshots/it__wire__gemini__count_tokens_wire_shape.snap
---
source: lib/components/fabro-llm/tests/it/wire/gemini.rs
expression: rendered
---
{
  "method": "POST",
  "path": "/models/gemini-test:countTokens",
  "headers": [
    [
      "accept",
      "*/*"
    ],
    [
      "content-length",
      "583"
    ],
    [
      "content-type",
      "application/json"
    ],
    [
      "host",
      "[host]"
    ],
    [
      "x-goog-api-key",
      "test-key"
    ]
  ],
  "body": {
    "generateContentRequest": {
      "contents": [
        {
          "role": "user",
          "parts": [
            {
              "text": "Hello"
            }
          ]
        }
      ],
      "systemInstruction": {
        "parts": [
          {
            "text": "Be concise"
          }
        ]
      },
      "generationConfig": {
        "maxOutputTokens": 128
      },
      "tools": [
        {
          "functionDeclarations": [
            {
              "name": "search",
              "description": "Search files",
              "parameters": {
                "type": "object",
                "properties": {
                  "query": {
                    "type": "string"
                  }
                },
                "required": [
                  "query"
                ]
              }
            },
            {
              "name": "read_file",
              "description": "Read a file by path",
              "parameters": {
                "type": "object",
                "properties": {
                  "path": {
                    "type": "string"
                  }
                }
              }
            }
          ]
        }
      ],
      "safety_settings": [
        {
          "category": "HARM_CATEGORY_DANGEROUS_CONTENT",
          "threshold": "BLOCK_ONLY_HIGH"
        }
      ]
    }
  }
}
