lib/components/fabro-llm/tests/it/wire/snapshots/it__wire__gemini__decode_safety_finish_reason.snap
---
source: lib/components/fabro-llm/tests/it/wire/gemini.rs
expression: rendered
---
"content_filter"
