lib/components/fabro-llm/tests/it/wire/snapshots/it__wire__gemini__encode_bad_file_path_attachments_dropped.snap
---
source: lib/components/fabro-llm/tests/it/wire/gemini.rs
expression: rendered
---
{
  "contents": [
    {
      "role": "user",
      "parts": [
        {
          "text": "Describe these attachments."
        }
      ]
    }
  ],
  "generationConfig": {
    "maxOutputTokens": 128
  },
  "safety_settings": [
    {
      "category": "HARM_CATEGORY_DANGEROUS_CONTENT",
      "threshold": "BLOCK_ONLY_HIGH"
    }
  ]
}
